Nade cycling fix + fix extra space above kill feed

--- a/client/src/scss/pages/client/game.scss
+++ b/client/src/scss/pages/client/game.scss
@@ -240,6 +240,7 @@
 
     #kill-feed {
         margin-right: 180px;
+        margin-top: -10px;
         @media screen and (max-width: $screen_large) {
             margin-right: 80px;
         }
